@startuml
title Package di Analisi Completo - Smart Home System

skinparam linetype ortho
skinparam backgroundColor #FEFEF8
skinparam defaultFontSize 11

package "Analisi Smart Home" as PanalisiSH <<Analysis>> {
  package "Attività" as PAttivita <<Dominio>> {
    class Utente <<Entity>> {
      + id: str
      + email: str
      + autentica(password: str): bool
      + cambia_password(nuova_password: str): void
    }

    class Amministratore <<Entity>> {
      + livello_accesso: int
      + gestisci_automazione(auto: Automazione): void
    }

    class Automazione <<Entity>> {
      + id: str
      + nome: str
      + attiva: bool
      + orario: str
      + deve_eseguire(): bool
      + esegui(): bool
    }

    class Regola <<ValueObject>> {
      + id: str
      + tipo_condizione: str
      + valuta_condizione(): bool
    }

    class Evento <<Entity>> {
      + id: str
      + timestamp: DateTime
      + tipo: str
    }

    class Dispositivo <<Entity>> {
      + id: str
      + nome: str
      + stato: str
      + invia_comando(comando: str): bool
    }

    class Luce <<Entity>> {
      + intensita: int
      + colore: str
    }

    class Termostato <<Entity>> {
      + temperatura_target: float
      + modalita: str
    }

    class Serratura <<Entity>> {
      + modalita_sicurezza: bool
    }

    class Stanza <<Entity>> {
      + id: str
      + nome: str
      + piano: int
      + aggiungi_dispositivo(disp: Dispositivo): void
    }

    class LogEventi <<Entity>> {
      + id: str
      + eventi: list
      + aggiungi_evento(evento: Evento): void
    }

    Utente <|-- Amministratore
    Automazione "1" o-- "0..*" Regola : composta da
    Stanza "1" o-- "0..*" Dispositivo : contiene
    Dispositivo <|-- Luce
    Dispositivo <|-- Termostato
    Dispositivo <|-- Serratura
    LogEventi "1" o-- "0..*" Evento : registra
  }

  package "Servizio" as PServizio <<Service>> {
    class ServizioDispositivi <<Service>> {
      + elenca(): list
      + invia_comando(id: str, comando: str): Dispositivo
    }

    class ServizioStanze <<Service>> {
      + elenca(): list
      + crea(stanza: Stanza): Stanza
    }

    class ServizioAutomazioni <<Service>> {
      + esegui_tutte(): list
      + elenca_attive(): list
    }

    class ProgrammatoreAutomazioni <<Service>> {
      + avvia(): void
    }

    ServizioDispositivi --> Dispositivo
    ServizioStanze --> Stanza
    ServizioAutomazioni --> Automazione
    ProgrammatoreAutomazioni --> ServizioAutomazioni
  }

  package "Repository" as PRepository <<DataAccess>> {
    class RepositoryUtenti <<Repository>> {
      + trova_per_email(email: str): Utente
      + salva(utente: Utente): void
    }

    class RepositoryEventi <<Repository>> {
      + cerca(filtro: str): list
      + salva(evento: Evento): void
    }

    class RepositoryDispositivi <<Repository>> {
      + salva(dispositivo: Dispositivo): void
      + trova_per_id(id: str): Dispositivo
    }

    class RepositoryDatiSistema <<Repository>> {
      + salva_backup(): str
      + elenca_backup(): list
      + carica_backup(percorso: str): str
      + elimina_backup(percorso: str): bool
    }
  }
}

PAttivita ..> PServizio : <<use>>\nUtilizza servizi per\ngestire dispositivi
PServizio ..> PRepository : <<use>>\nAccede ai dati\nper persistenza
PAttivita ..> PRepository : <<use>>\nAccede ai dati\nper persistenza

@enduml
